<resources>
    <string name="app_name">bluPresence</string>
    <string name="menu_instituicao">Instituição</string>
    <string name="menu_turmas">Turmas</string>
    <string name="menu_chamadas">Realizar Chamada</string>
    <string name="nova_instituicao">Nova Instituição</string>
    <string name="instituicao">Instituição</string>
    <string name="url">URL</string>
    <string name="testar_conexao">Testar Conexão</string>
    <string name="carregando">Carregando...</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="autenticar">Autenticar</string>
    <string name="invalidUrl">URL inválida</string>
    <string name="invalidUrlMessage">A URL digitada é inválida</string>
    <string name="OK">OK</string>
    <string name="sucesso">Sucesso!</string>
    <string name="sucessoMensagemPrefixo">Sucesso! Mensagem do servidor: </string>
    <string name="sucessoMensagemSufixo">\nRecebido às </string>
    <string name="turma">Turma</string>
    <string name="salvar">Salvar</string>
    <string name="nova_chamada">Nova Chamada</string>
    <string name="data">Data</string>
    <string name="abrir_conexao">Abrir Conexão</string>
    <string name="alterar">Alterar</string>
    <string name="enviar_dados">Enviar dados</string>
</resources>
